@@ -10,3 +10,5 @@ Makefile.in
 *.pyo
 gtk.c
 libglade.c
+gtkgl.c
+
