@@ -1,5 +1,6 @@
 
-INCLUDES = -I$(top_srcdir) $(PYTHON_INCLUDES) $(GTK_CFLAGS) $(GDK_IMLIB_CFLAGS)
+INCLUDES = -I$(top_srcdir) $(PYTHON_INCLUDES) $(GTK_CFLAGS) \
+	$(GDK_IMLIB_CFLAGS) $(LIBGLADE_CFLAGS) $(GTKGL_CFLAGS)
 
 if BUILD_IMLIB
 imlibmodule = imlibmodule.la
@@ -7,12 +8,15 @@ endif
 if BUILD_LIBGLADE
 libglademodule = libglademodule.la
 endif
+if BUILD_GTKGL
+glmodule = glmodule.la
+endif
 
 pysitedir = $(PYTHON_SITE)
 pysite_PYTHON = __init__.py GTK.py GDK.py
 
 pyexecdir = $(PYTHON_SITE_EXEC)
-pyexec_LTLIBRARIES = _gtkmodule.la $(imlibmodule) $(libglademodule)
+pyexec_LTLIBRARIES = _gtkmodule.la $(imlibmodule) $(libglademodule) $(glmodule)
 
 _gtkmodule_la_LDFLAGS = -module -avoid-version
 _gtkmodule_la_LIBADD = $(GTK_LIBS)
@@ -36,6 +40,12 @@ libglademodule_la_SOURCES = \
 	libglademodule.c \
 	libglade.c
 
+glmodule_la_LDFLAGS = -module -avoid-version
+glmodule_la_LIBADD = $(GTKGL_LIBS) $(GTK_LIBS)
+glmodule_la_SOURCES = \
+	gtkglmodule.c \
+	gtkgl.c
+
 # chmod hack here is because automake guys decided distdir should be
 # read only for the next version :(
 $(srcdir)/gtk.c: $(srcdir)/gtk.defs $(srcdir)/gdk.defs \
@@ -53,11 +63,17 @@ $(srcdir)/libglade.c: $(srcdir)/libglade.defs $(srcdir)/libglade.override
 	&& cp gen-libglade.c libglade.c \
 	&& rm -f gen-libglade.c
 
+$(srcdir)/gtkgl.c: $(srcdir)/gtkgl.defs $(srcdir)/gtkgl.override
+	-chmod a+w $(srcdir)
+	cd $(srcdir) \
+	&& $(PYTHON) ../codegen/codegen.py -r gtk.defs -o gtkgl.override -p pygtkgl gtkgl.defs > gen-gtkgl.c \
+	&& cp gen-gtkgl.c gtkgl.c \
+	&& rm -f gen-gtkgl.c
+
 
 # a hack so that gtk.c is not included in the final package.
 dist-hook:
-	-rm -f $(distdir)/gtk.c $(distdir)/libglade.c
+	-rm -f $(distdir)/gtk.c $(distdir)/libglade.c $(distdir)/gtkgl.c
 
 EXTRA_DIST = gtk.defs gtk-extrafuncs.defs gdk.defs gtk.override \
-	libglade.defs libglade.override
-
+	libglade.defs libglade.override gtkgl.defs gtkgl.override
