@@ -1,3 +1,14 @@
+2000-06-23  James Henstridge  <james@daa.com.au>
+
+	* examples/gl/*.py: update examples with s/gtkgl/gtk.gl/
+
+	* gtk/Makefile.am: add rules to build gtk.gl.
+
+	* gtk/gtkglmodule.c (initgl): initialise lots of constants.
+
+	* gtk/gtkgl.defs, gtk/gtkgl.override, gtk/gtkglmodule.c: wrapper for
+	gtkglarea.
+
 2000-06-22  James Henstridge  <james@daa.com.au>
 
 	* gtk/libglade.override: add initialisation code to import GtkData
